--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-  default-flavor: staging
+  default-flavor: production
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
